Updated Babel to 7.1.4. Also updated babel-loader to 8.0.4. Changed [chunkhash] to [hash] in webpack/shared.js.

--- a/package.json
+++ b/package.json
@@ -42,9 +42,9 @@
     "extends": "semistandard"
   },
   "dependencies": {
-    "babel-core": "^6.26.0",
+    "@babel/core": "^7.1.2",
     "babel-eslint": "^8.2.3",
-    "babel-loader": "^7.1.4",
+    "babel-loader": "^8.0.4",
     "babel-polyfill": "^6.26.0",
     "babel-preset-env": "^1.7.0",
     "clean-webpack-plugin": "^0.1.19",
